log/build_2024-12-05_14-51-47/py_pkg/stderr.log
  File "/home/user/ros2_ws/install/py_pkg/lib/python3.10/site-packages/py_pkg/lidar_node.py", line 25
    			if self.serial_port.readline().decode('utf-8').strip()
    			                                                      ^
SyntaxError: expected ':'

